Added TensorFlow installation instructions

--- a/notebooks/Embracing simplicity - Subsets and baseline models.ipynb
+++ b/notebooks/Embracing simplicity - Subsets and baseline models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,19 +18,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0.0-beta0\n"
+      "2.0.0-rc0\n"
      ]
     }
    ],
    "source": [
     "print(tf.__version__)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Install TensorFlow 2.0 by running if you haven't already - \n",
+    "\n",
+    " `pip install tensorflow==2.0.0-rc0`"
    ]
   },
   {
